<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv"
            android:src="@drawable/his_music"
            android:layout_width="34dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv"
            android:text="@string/his_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:src="@drawable/forward"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:background="@color/Grey"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_margin="6dp"
        android:text="@string/his_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv1"
            android:src="@drawable/center_image_collection"
            android:layout_width="34dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv1"
            android:text="@string/image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:src="@drawable/forward"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:background="@color/Grey"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="35dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv2"
            android:src="@drawable/center_reading_collection"
            android:layout_width="34dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv2"
            android:text="@string/article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:src="@drawable/forward"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:background="@color/Grey"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="35dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv3"
            android:src="@drawable/center_movie_collection"
            android:layout_width="34dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv3"
            android:text="@string/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:src="@drawable/forward"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:background="@color/Grey"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>